[OPENENGSB-661] making the process work in windows
Signed-off-by: Andreas Pieber <anpieber@gmail.com>